--- a/common/footer-en.html
+++ b/common/footer-en.html
@@ -96,7 +96,11 @@
 							<div class="copyright">© 2019 Adient plc. All Rights Reserved.On October 31, 2016, Adient plc (“Adient”) completed its separation from Johnson Controls International plc (“Johnson Controls”) and is now an independent, publicly traded company. 
 								Adient, and not Johnson Controls, is responsible for the operation of the Adient business, including this website. 
 							</div>
-							<div class="clause"><a href="http://www.miitbeian.gov.cn"  target="_blank" style="font-size:12px">渝ICP备18007434号-1</a></div>
+							<div class="clause">
+								<div>TEL: +86 23 86001988</div>
+								<div>ADD: 重庆市渝北区黄茅坪平泰路99号</div>
+								<a href="http://www.miitbeian.gov.cn"  target="_blank" style="font-size:12px">渝ICP备18007434号-1</a>
+							</div>
 						</div>
 					</div>
 					
