--- a/common/footer.html
+++ b/common/footer.html
@@ -97,7 +97,11 @@
 							<div class="copyright">© 2018 Adient plc. All Rights Reserved
 								2016年10月31日，Adient plc(“Adient”)完成了与Johnson Controls International plc(“Johnson Controls”)的分离，现在是一个独立的公开贸易公司。而不是约翰逊的管理者，负责这项业务的运作，包括这个网站。
 							</div>
-							<div class="clause"><a href="http://www.miitbeian.gov.cn"  target="_blank" style="font-size:12px">渝ICP备18007434号-1</a></div>
+							<div class="clause">
+								<div>电话：+86 23 86001988</div>
+								<div>地址：重庆市渝北区黄茅坪平泰路99号</div>
+								<a href="http://www.miitbeian.gov.cn"  target="_blank" style="font-size:12px">渝ICP备18007434号-1</a>
+							</div>
 						</div>
 					</div>
 					
