--- a/m/about-en.html
+++ b/m/about-en.html
@@ -35,7 +35,7 @@
 }
 .section2 .content{
 	position: absolute;
-	padding: 20px;
+	padding: 3%;
 	min-width: 85%;
 }
 .section2 .content1{
@@ -124,21 +124,21 @@
 }
 .section3 .content-box{
 	display: flex;
+	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	/* padding-top: 50px; */
-	padding: 15% 0;
+	padding: 15% 0 5%;
 	overflow: hidden;
 }
 .section3 .title{
-	width: 30px;
+	margin-top: -15%;
 }
 .section3 .content{
-	width: 85%;
+	width: 95%;
 	height: 100%;
+	line-height: 16px;
 }
 .section3 .item-box{
-	/* padding-left: 10px; */
 	padding: 0 0 20px 10px;
 	border-left: 1px solid;
 	display: flex;
