--- a/m/common/footer.html
+++ b/m/common/footer.html
@@ -37,6 +37,8 @@
 	</div>	
 	<div class="text-box">
 		<div class="text1">© 2018 Adient plc. All Rights Reserved</div>
+		<div class="text2">电话：+86 23 86001988</div>
+		<div class="text2">地址：重庆市渝北区黄茅坪平泰路99号</div>
 		<div class="text2"><a href="http://www.miitbeian.gov.cn" target="_blank">渝ICP备18007434号-1</a></div>
 	</div>
 </footer>
