--- a/m/culture-en.html
+++ b/m/culture-en.html
@@ -54,6 +54,11 @@
     text-align: center;
     width: 100%;
 }
+@media (max-width:370px){
+	.section2 .content3{
+		font-size: 12px;
+	}
+}
 .section2 .split{
 	margin: 0 5px;
 }
