--- a/m/index-en.html
+++ b/m/index-en.html
@@ -40,8 +40,8 @@
 }
 .section4 .content{
 	position: absolute;
-    bottom: 100px;
-    left: 50px;
+    bottom: 90px;
+    left: 9%;
 }
 .section5 .china-map{
 	bottom: 5%;
@@ -83,7 +83,7 @@
 .section7 .content{
 	position: absolute;
     top: 70px;
-    left: 50px;
+    left: 5%;
 }
 #index .china-map .region-list{
 	display: none;
@@ -120,7 +120,7 @@
 	</section>
 	<section class="section2">
 		<a href="video/adt4k.mp4" class="lightbox-image play-box">
-			<img src="images/index/2-1.jpg" />
+			<img src="images/index/en-2-1.jpg" />
 			<img class="my-all-center play" src="images/icons/play.png">
 		</a>
 	</section>
