--- a/m/profession-en.html
+++ b/m/profession-en.html
@@ -32,7 +32,7 @@
 .section1 .content{
 	position: absolute;
     bottom: 0;
-	padding: 20px;
+	padding: 20px 10px;
 	width: 100%;
 }
 .section1 .cont2{
@@ -108,7 +108,7 @@
 	margin: 5px 0;
 }
 .section6 .content1{
-	margin: 30px 40px 20px 30px;
+	margin: 20px 4% 10px 4%;
 	border-left: 2px solid rgba(0,70,91,1);
     padding-left: 10px;
 }
@@ -146,7 +146,7 @@
 	flex-direction: column;
 	justify-content: space-around;
 	align-items: center;
-	padding: 0 20px;
+	padding: 0 3%;
 }
 .section7 .content1 .cont2{
 	margin-top: 5px;
@@ -370,7 +370,7 @@
 		</div>
 	</section>
 	<section class="section7">
-		<img src="images/profession/7-1.jpg" />
+		<img src="images/profession/en-7-1.jpg" />
 		<div class="content my-color1">
 			<div class="content1 wow fadeInUp ani-time2">
 				<div class="cont1 my-font6 my-color2">Diversified learning resources</div>
@@ -403,7 +403,7 @@
 		</div>
 	</section>
 	<section class="section8">
-		<img src="images/profession/8-1.jpg" />
+		<img src="images/profession/en-8-1.jpg" />
 		<div class="content">
 			<div class="content1 wow fadeInUp ani-time2">
 				<img src="images/profession/en-icon8-1.png" />
@@ -416,7 +416,7 @@
 		</div>
 	</section>
 	<section class="section9">
-		<img src="images/profession/9-1.jpg" />
+		<img src="images/profession/en-9-1.jpg" />
 		<div class="content content-box">
 			<div class="content1 wow fadeInUp ani-time2">
 				<div class="cont1 my-font6 my-color5">CQYFAS Leadership Academy</div>
@@ -435,7 +435,7 @@
 		</div>
 	</section>
 	<section class="section10">
-		<img src="images/profession/10-1.jpg" />
+		<img src="images/profession/en-10-1.jpg" />
 		<div class="content content-box">
 			<div class="content1 my-color1 wow fadeInUp ani-time2">
 				<div class="cont1 my-font6 my-color2">CQYFAS Professional Academy</div>
