--- a/m/technology-en.html
+++ b/m/technology-en.html
@@ -114,22 +114,14 @@
 .section3 .item-box .cont-box2{
 	width: 30%;
 	border-top: 2px solid rgba(0,70,91,1);
-	padding: 10px;
-}
-/* .section3 .content2 .cont-box{
-	width: 50%;
-	position: relative;
-}
-.section3 .content2 .text-box{
 	display: flex;
-    flex-direction: column;
-    justify-content: center;
-	padding: 10px;
-	color: #fff;
+    align-items: center;
+	text-align: center;
+	justify-content: center;
 }
-.section3 .content2 .text-box .cont1{
-	margin-bottom: 5px;
-} */
+.section3 .item-box.tex-box{
+	padding: 5px;
+}
 .section4{
 	margin: 10px 0 5px;
 }
@@ -155,13 +147,13 @@
 }
 .section5 .content{
 	position: absolute;
-	right: 20px;
+	right: 10px;
     bottom: 0;
 	transform: translateY(50%);
 	-webkit-transform: translateY(50%);
 	color: #fff;
     text-align: center;
-    padding: 15px 20px;
+    padding: 10px;
 }
 .section5 .content .cont1{
 	margin-bottom: 5px;
@@ -181,17 +173,17 @@
 }
 .section6 .content2{
 	position: relative;
-	
+	font-size: 0.75rem;
 }
 .section6 .content2>.content-box{
 	display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
 	align-items: center;
-	padding: 5%;
+	padding: 0 2%;
 }
 .section6 .content2 .item-box{
-	width: 49%;
+	width: 49.5%;
 	position: relative;
 }
 .section6 .item-box .box1{
@@ -258,36 +250,46 @@
 				<div class="cont-box1 wow fadeInLeft"><img src="images/technology/3-1.jpg" /></div>
 				<div class="cont-box2 wow fadeInRight">
 					<div class="cont1 my-color5 my-font1">Welcome module</div>
-					<div class="cont2 my-font3">When the door is opened, it will automatically rotate 45° for easy entry.</div>
 				</div>
+			</div>
+			<div class="item-box tex-box">
+				<div class="cont2 my-font3">When the door is opened, it will automatically rotate 45° for easy entry.</div>
 			</div>
 			<div class="item-box">
 				<div class="cont-box1 wow fadeInLeft"><img src="images/technology/3-2.jpg" /></div>
 				<div class="cont-box2 wow fadeInRight">
 					<div class="cont1 my-color5 my-font1">Storage Modules</div>
-					<div class="cont2 my-font3">A number of ingenious storage designs provide greater support for your entertainment and mobile work.</div>
 				</div>
+			</div>
+			<div class="item-box tex-box">
+				<div class="cont2 my-font3">A number of ingenious storage designs provide greater support for your entertainment and mobile work.</div>
 			</div>
 			<div class="item-box">
 				<div class="cont-box1 wow fadeInLeft"><img src="images/technology/3-3.jpg" /></div>
 				<div class="cont-box2 wow fadeInRight">
 					<div class="cont1 my-color5 my-font1">Comfort module</div>
-					<div class="cont2 my-font3">With massage, lumbar support, leg rest, ventilation, flexible to adjust to provide ultimate comfort.</div>
 				</div>
+			</div>
+			<div class="item-box tex-box">
+				<div class="cont2 my-font3">With massage, lumbar support, leg rest, ventilation, flexible to adjust to provide ultimate comfort.</div>
 			</div>
 			<div class="item-box">
 				<div class="cont-box1 wow fadeInLeft"><img src="images/technology/3-4.jpg" /></div>
 				<div class="cont-box2 wow fadeInRight">
 					<div class="cont1 my-color5 my-font1">Multi-directional adjustment</div>
-					<div class="cont2 my-font3">Multi-directional adjustment and seat memory function, can realize 45° and 180° double-angle flexible rotation, and quickly adjust the comfortable position in the car.</div>
 				</div>
+			</div>
+			<div class="item-box tex-box">
+				<div class="cont2 my-font3">Multi-directional adjustment and seat memory function, can realize 45° and 180° double-angle flexible rotation, and quickly adjust the comfortable position in the car.</div>
 			</div>
 			<div class="item-box">
 				<div class="cont-box1 wow fadeInLeft"><img src="images/technology/3-5.jpg" /></div>
 				<div class="cont-box2 wow fadeInRight">
 					<div class="cont1 my-color5 my-font1">Air Purification</div>
-					<div class="cont2 my-font3">The air purifier is installed on the backrest to monitor the real-time air inside the vehicle, automatically purify the air, so you can breathe fresh air in the car.</div>
 				</div>
+			</div>
+			<div class="item-box tex-box">
+				<div class="cont2 my-font3">The air purifier is installed on the backrest to monitor the real-time air inside the vehicle, automatically purify the air, so you can breathe fresh air in the car.</div>
 			</div>
 		</div>
 	</section>
@@ -348,8 +350,8 @@
 					<div class="cont1 my-font1">Prototype</div>
 					<div class="cont2">
 						<div>Prototype Product Delivery</div>
-						<div> Design Verification</div>
-						<div>精致工艺验证</div>
+						<div>Design Verification</div>
+						<div>Exquisite process certification</div>
 						<div>Manufacturing Feasibility Verification</div>
 					</div>
 				</div>
@@ -393,7 +395,7 @@
 	</section>
 	<section class="section6">
 		<div class="content1 my-color5"> 
-			<div class="cont1 my-font5 wow fadeInLeft"><span>Manufacturing</span>capacity</div>
+			<div class="cont1 my-font5 wow fadeInLeft"><span>Manufacturing</span> capacity</div>
 			<div class="cont2 my-font4 wow fadeInLeft ani-time2">We have</div>
 			<div class="cont3 my-font6 wow fadeInLeft ani-time2">manufacturing capabilities from parts to complete seats</div>
 		</div>
