--- a/product.html
+++ b/product.html
@@ -245,8 +245,7 @@
 						<div class="content content1 animated ani-time2" data-my-animate="fadeInDown100">
 							<div class="cont-text">
 									<div class="cont1 my-color3">骨架与零部件</div>
-									<div class="cont2 my-color4">通过运行先进材料和先进工艺，达到产品性能提升，实现模块化和平台化
-										策略，提升产品轻量化，致力超越客户多样化的需求。
+									<div class="cont2 my-color4">通过运行先进材料和先进工艺，达到产品性能提升，实现模块化和平台化策略，提升产品轻量化，致力超越客户多样化的需求。
 									</div>
 							</div>
 						</div>
@@ -268,8 +267,7 @@
 						<div class="content content1 my-bg-color2">
 							<div class="cont-text animated ani-time2" data-my-animate="fadeInLeft">
 								<div class="cont1 my-color3">面套</div>
-								<div class="cont2 my-color1">从面料的设计，到面料的后处理精致工艺及领先的放版、
-									裁剪、缝制技术，使座椅呈现高品质的外观，为创意设计和凸显个性化提供更大的自由度。
+								<div class="cont2 my-color1">从面料的设计，到后处理精致工艺及领先的放版、裁剪、缝制技术，使座椅呈现高品质的外观，为创意设计和凸显个性化提供更大的自由度。
 								</div>
 							</div>
 						</div>
@@ -280,8 +278,7 @@
 						<div class="content content2">
 							<div class="cont-text animated ani-time2" data-my-animate="fadeInLeft">
 								<div class="cont1 my-color3">泡沫</div>
-								<div class="cont2 my-color4">独有的配方经验，和领先的制造技术，能使产品在不同区域和不同层次表现出不同
-									的软硬度，带给驾乘者短期和长期舒适性能。
+								<div class="cont2 my-color4">独有的配方经验，和领先的制造技术，使产品在不同区域和不同层次表现出不同的软硬度，带给驾乘者短期和长期舒适性能。
 								</div>
 							</div>
 						</div>
