--- a/technology-en.html
+++ b/technology-en.html
@@ -580,7 +580,7 @@
 								<div class="content">
 									<div>Prototype Product Delivery</div>
 									<div>Design Verification</div>
-									<div>精致工艺验证</div>
+									<div>Exquisite process certification</div>
 									<div>Manufacturing Feasibility Verification</div>
 								</div>
 							</div>
