--- a/culture-en.html
+++ b/culture-en.html
@@ -133,7 +133,8 @@
 .section3 .text-box{
 	position: absolute;
     bottom: 0;
-    padding: 20px;
+	padding: 10px 20px;
+	line-height: 20px;
 }
 .section3 .title-text{
 	font-size: 16px;
@@ -430,7 +431,7 @@
 					<div class="text-box">
 						<div class="title-text">
 							<span>Spring Festival Gala Evening</span>
-							<span class="time"> 每年1~2月</span>
+							<span class="time"> During January and February every year</span>
 						</div>
 						<div class="cont-text">At Chongqing Yanfeng Adient ，the Spring Festival is an annual event .It’s the stage that belongs to “Aixiaoyu,”every year, the theme of the Spring Festival gala all goes according to the occasion ,
 							 all the programs are produced by Chongqing Yanfeng Adient group according to the popular elements and make uo the audio-visual feast.
@@ -446,7 +447,7 @@
 					<div class="text-box">
 						<div class="title-text">
 							<span>Family Week</span>
-							<span class="time"> 每年11月1日</span>
+							<span class="time"> 1st November each year</span>
 						</div>
 						<div class="cont-text">We invite the family member of employees to participate in the special activities on November 1st of each year, so as to feel the happy family culture that Chongqing Yanfeng Adient always advocates.
 							 Therefore, we call it “family day”. In the traditional sense, (1+1)+1 represents, 1+1 represents the two main members of the family, and the remaining 1 represents the child.
@@ -462,7 +463,7 @@
 					<div class="text-box">
 						<div class="title-text">
 							<span>Team Rally </span>
-							<span class="time">  每年7月</span>
+							<span class="time"> July each year</span>
 						</div>
 						<div class="cont-text">Since 1996, Chongqing Yanfeng Adient factories have organized teams of employees to participate in the competition, and the latest continuous improvement results of Chongqing Yanfeng Adient are presented through performances,
 							 dances and other forms on the stage of team gatherings. This activity will be held in July every year in Chongqing Yanfeng Adient plant internal competition, the second half of the year will be held in China and the Asia-pacific region competition. 
