--- a/m/culture.html
+++ b/m/culture.html
@@ -250,7 +250,7 @@
 			<img src="images/culture/3-3.jpg" />
 			<div class="cont-box my-bg-color9 wow fadeInUp ani-time2">
 				<div class="cont1 my-font1">星耀盛典</div>
-				<div class="cont2">从2015年开始，重庆延锋安道拓开始举办独立的年度奖项颁奖典礼。
+				<div class="cont2">从2015年开始，重庆延锋安道拓每年举办独立的年度奖项颁奖典礼。
 						我们鼓励个人、团队积极推选符合奖项的 候选人，号召艾小渝们不断探索真知、追求卓越。</div>
 			</div>
 		</div>
@@ -286,10 +286,11 @@
 				<div style="margin-top: 5px">此书由重庆延锋安道拓公司所有同仁,用血浓于水的感情</div>
 				<div>共同写就。这是一个企业对自己的锤炼,更是一群骨子里</div>
 				<div>永远都热血的人,为共同走过的时光、彼此见证的过往,</div>
-				<div>亲手打造的一份弥足珍贵的成长纪念。第一版印刷的</div>
-				<div>4000册将进行爱心认购,所得款项全部进入蓝天基金。</div>
-				<div>用来支持环境的可持续发展,社会服务,教育事业等公益</div>
-				<div>之举!</div>
+				<div>亲手打造的一份弥足珍贵的成长纪念。《文化的力量》</div>
+				<div>将进行爱心认购,所得款项全部进入蓝天基金。用来</div>
+				<div>支持环境的可持续发展,社会服务,教育事业等公益之举!</div>
+				<!-- <div></div> -->
+				<div>爱心认购热线：023-8879 7090</div>
 			</div>
 			<!-- <div class="cont4">此书由重庆延锋安道拓公司所有同仁,用血浓于水的感情共同写就。
 					这是一个企业对自己的锤炼,更是一群骨子里永远都热血的人,
@@ -333,7 +334,7 @@
 				<div class="box2 wow fadeInUp">
 					<div class="title my-font1 my-color2">开展蓝天计划的意义</div>
 					<div class="text">当地社区受益于志愿者的参与，我们也能从不断提高的领导经验和员工团队建设中
-							获益匪浅。重庆延锋安道拓的社会责任项目表面公司对于实现最高标准绩效、团队合作、包容性、领导力及成长的承诺。
+							获益匪浅。重庆延锋安道拓的社会责任项目表明公司对于实现最高标准绩效、团队合作、包容性、领导力及成长的承诺。
 							公司支持员工加入全球的自愿行动，并且珍视员工为社区所做的重要贡献。</div>
 				</div>
 				<img class="box3 wow fadeInUp" src="images/culture/icon3.png" />
@@ -365,7 +366,7 @@
 			<div class="content my-bg-color9 wow fadeInUp ani-time2">
 				<div class="cont1 my-font1">为爱奔跑</div>
 				<div class="cont2">“为爱奔跑”8 小时接力公益赛起源于2014 年，是一次用“公益、自助、环保”贯穿前期训练、活动筹备、比赛全程的赛事。
-						本次活动秉承着自愿捐赠的原则，最终您的每一步，公司捐助的每一笔赞助金，我们都将用于后期资助学校的修建和贫困小孩的帮扶等爱心活动。</div>
+						活动秉承着自愿捐赠的原则，最终您的每一步，公司捐助的每一笔赞助金，我们都将用于后期资助学校的修建和贫困小孩的帮扶等爱心活动。</div>
 			</div>
 		</div>
 		<div class="content5 item-box">
