--- a/common/footer-en.html
+++ b/common/footer-en.html
@@ -98,7 +98,7 @@
 							</div>
 							<div class="clause">
 								<div>TEL: +86 23 86001988</div>
-								<div>ADD: 重庆市渝北区黄茅坪平泰路99号</div>
+								<div>ADD: No. 99 Pingtai Road, Huangmaoping, Yubei District, Chongqing</div>
 								<a href="http://www.miitbeian.gov.cn"  target="_blank" style="font-size:12px">渝ICP备18007434号-1</a>
 							</div>
 						</div>
