--- a/culture-en.html
+++ b/culture-en.html
@@ -508,12 +508,13 @@
 					<div class="animated-text cont2 text-box animated wow fadeInRight">
 						<div>
 							<div>The power of culture is dedicated to our dear friends, learning and inheriting, and heading for the future.</div>
-							<div> The power of culture is dedicated to outstanding peers, sharing and moving foward.</div>
+							<div>The power of culture is dedicated to outstanding peers, sharing and moving foward.</div>
 							<div>The power of culture is dedicated to our esteemed friends, cast gravel led pearl, quote and prove fully.</div>
 							<div>The power of culture is dedicated to our next generation, to give back to society and to help the public good.</div>
 							<div style="margin-top: 15px;text-indent: 2em;padding-left: 5px;
-							text-align: justify;">This book by Chongqing Yanfeng Adient company all colleagues with the feelings of blood is thicker than water . This is the temper of an enterprise on itself, but also a group of people who will always have blood in their bones, and the past they have witnessed , a precious memorial for growth created by themselves. The 4,000 copies of the first volume will be donated to the blue sky fund to support environmental sustainability, social services, and education!
+							text-align: justify;">This book by Chongqing Yanfeng Adient company all colleagues with the feelings of blood is thicker than water . This is the temper of an enterprise on itself, but also a group of people who will always have blood in their bones, and the past they have witnessed , a precious memorial for growth created by themselves. The power of culture will be donated to the blue sky fund to support environmental sustainability, social services, and education!
 							</div> 
+							<div>Love subscription hotline: 023-8879 7090</div>
 						</div>
 					</div>
 			</div>
