--- a/m/culture-en.html
+++ b/m/culture-en.html
@@ -98,7 +98,7 @@
 }
 .section4 .text{
 	position: absolute;
-    top: 20%;
+    top: 10%;
     width: 100%;
     text-align: center;
 }
@@ -112,8 +112,8 @@
 	position: absolute;
 	top: 0;
 	bottom: 0;
-	padding: 0 10px;
 	min-width: 70%;
+	max-width: 350px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -123,6 +123,9 @@
 	width: 60%;
 	margin: 5% 0;
 }
+.section5 .cont3{
+	padding: 0 3%;
+}
 .section6{
 	margin-top: 10px;
 }
@@ -131,7 +134,7 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-around;
-	padding: 10%;
+	padding: 5%;
 }
 .section6 .content1{
 	width: 90%;
@@ -147,7 +150,7 @@
 }
 .section7 .content1 .cont-box1 .content{
 	position: absolute;
-	padding: 20px;
+	padding: 3%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -157,7 +160,7 @@
 }
 .section7 .content1 .cont-box2 {
 	margin-top: 5px;
-	padding: 30px 20px 50px;
+	padding: 30px 3% 50px;
 	position: relative;
 }
 .section7 .content1 .box1{
@@ -172,21 +175,30 @@
     width: 15px;
 }
 .section7 .content1 .cont-box3{
-	padding: 15px 20px 5px;
+	padding: 15px 3% 5px;
 }
 .section7 .item-box{
 	position: relative;
 	margin-top: 5px;
 }
+@media (max-width: 370px){
+	.section7 .item-box{
+		padding-bottom: 50px;
+		background: rgba(4,69,87,0.5);
+	}
+}
 .section7 .item-box .content{
 	position: absolute;
     bottom: 0;
     width: 100%;
-	padding: 10px;
+	padding: 1% 3%;
 	color: #fff;
 }
 .section7 .item-box .content .cont1{
-	margin-bottom: 5px;
+	/* margin-bottom: 5px; */
+}
+.section7 .item-box .content .cont2{
+	line-height: 1rem;
 }
 .section8 .title{
 	height: 35px;
@@ -239,14 +251,14 @@
 			<img src="images/culture/3-1.jpg" />
 			<div class="cont-box my-bg-color9 wow fadeInUp ani-time2">
 				<div class="cont1 my-font1">Spring Festival Gala Evening</div>
-				<div class="cont2">At Chongqing Yanfeng Adient ，the Spring Festival is an annual event .It’s the stage that belongs to “Aixiaoyu,”every year, the theme of the Spring Festival gala all goes according to the occasion , all the programs are produced by Chongqing Yanfeng Adient group according to the popular elements and make uo the audio-visual feast.</div>
+				<div class="cont2">At Chongqing Yanfeng Adient ，the Spring Festival is an annual event .It’s the stage that belongs to "Aixiaoyu,"every year, the theme of the Spring Festival gala all goes according to the occasion , all the programs are produced by Chongqing Yanfeng Adient group according to the popular elements and make uo the audio-visual feast.</div>
 			</div>
 		</div>
 		<div class="content content2">
 			<img src="images/culture/3-2.jpg" />
 			<div class="cont-box my-bg-color9 wow fadeInUp ani-time2">
 				<div class="cont1 my-font1">Family Week</div>
-				<div class="cont2">We invite the family member of employees to participate in the special activities on November 1st of each year, so as to feel the happy family culture that Chongqing Yanfeng Adient always advocates. Therefore, we call it “family day”. In the traditional sense, (1+1)+1 represents, 1+1 represents the two main members of the family, and the remaining 1 represents the child. So we set November 1st  as parents’ day every year.</div>
+				<div class="cont2">We invite the family member of employees to participate in the special activities on November 1st of each year, so as to feel the happy family culture that Chongqing Yanfeng Adient always advocates. Therefore, we call it "family day". In the traditional sense, (1+1)+1 represents, 1+1 represents the two main members of the family, and the remaining 1 represents the child. So we set November 1st  as parents’ day every year.</div>
 			</div>
 		</div>
 		<div class="content content3">
@@ -269,15 +281,15 @@
 		<div class="content">
 			<a href="video/whll.mp4" class="lightbox-image play-box">
 				<img src="images/culture/4-1.jpg">
-				<div class="text my-color2 wow fadeInUp ani-time">This video is dedicated to you who are fighting for your dream. </div>
+				<div class="text my-color2 wow fadeInUp ani-time">This video is dedicated to you<br>  who are fightingfor your dream. </div>
 				<img class="my-all-center icon-play" src="images/icons/play.png">
 			</a>
 		</div>
 	</section>
 	<section class="section5">
-		<img src="images/culture/5-1.jpg" />
+		<img src="images/culture/en-5-1.jpg" />
 		<div class="content my-color1 my-font3 my-bg-color9">
-			<div class="cont1 my-font7 wow fadeInUp ani-time2">To be an enterprise<strong class="my-color2"> is to be a culture.</strong></div>
+			<div class="cont1 my-font1 wow fadeInUp ani-time2">To be an enterprise<strong class="my-color2"> is to be a culture.</strong></div>
 			<div class="cont2 wow fadeInUp ani-time3"><img src="images/culture/5-2.jpg" /></div>
 			<div class="cont3 wow fadeInUp ani-time2">
 				<div>The power of culture is dedicated to our dear friends,learning and inheriting, and heading for the future.</div>
@@ -291,7 +303,8 @@
 				<div>4000册将进行爱心认购,所得款项全部进入蓝天基金。</div>
 				<div>用来支持环境的可持续发展,社会服务,教育事业等公益</div>
 				<div>之举!</div> -->
-				<div>This book by Chongqing Yanfeng Adient company all colleagues with the feelings of blood is thicker than water . This is the temper of an enterprise on itself, but also a group of people who will always have blood in their bones, and the past they have witnessed , a precious memorial for growth created by themselves. The 4,000 copies of the first volume will be donated to the blue sky fund to support environmental sustainability, social services, and education</div>
+				<div>This book by Chongqing Yanfeng Adient company all colleagues with the feelings of blood is thicker than water . This is the temper of an enterprise on itself, but also a group of people who will always have blood in their bones, and the past they have witnessed , a precious memorial for growth created by themselves. The power of culture will be donated to the blue sky fund to support environmental sustainability, social services, and education</div>
+				<div>Love subscription hotline: 023-8879 7090</div>
 			</div>
 			<!-- <div class="cont4">此书由重庆延锋安道拓公司所有同仁,用血浓于水的感情共同写就。
 					这是一个企业对自己的锤炼,更是一群骨子里永远都热血的人,
@@ -350,22 +363,22 @@
 			<img src="images/culture/7-3.jpg" />
 			<div class="content my-bg-color9 wow fadeInUp ani-time2">
 				<div class="cont1 my-font1">School and enterprise Open day</div>
-				<div class="cont2">We invite all the winning teams of the “college student leadership challenge”to go to Chongqing Yanfeng Adient , Chongqing to display their winning works ,visit the company and local factories, and conduct in-depth visits between the university and enterprises. </div>
+				<div class="cont2">We invite all the winning teams of the "college student leadership challenge"to go to Chongqing Yanfeng Adient , Chongqing to display their winning works ,visit the company and local factories, and conduct in-depth visits between the university and enterprises. </div>
 			</div>
 		</div>
 		<div class="content4 item-box">
 			<img src="images/culture/7-4.jpg" />
 			<div class="content my-bg-color9 wow fadeInUp ani-time2">
 				<div class="cont1 my-font1">Run for love</div>
-				<div class="cont2">”Run for love”8-hour relay public welfare race originated in 2014, it is an event that USES” public welfare, self-help and environmental protection” throughout the preliminary training , activity preparation and competition. This activity adheres to the principle of voluntary donation. In the end, every step you make and every sponsorship fund donated by the company will be used to fund the construction of schools and help poor children in the later stage.</div>
+				<div class="cont2">"Run for love"8-hour relay public welfare race originated in 2014, it is an event that USES" public welfare, self-help and environmental protection" throughout the preliminary training , activity preparation and competition. This activity adheres to the principle of voluntary donation. In the end, every step you make and every sponsorship fund donated by the company will be used to fund the construction of schools and help poor children in the later stage.</div>
 			</div>
 		</div>
 		<div class="content5 item-box">
 			<img src="images/culture/7-5.jpg" />
 			<div class="content my-bg-color9 wow fadeInUp ani-time2">
 				<div class="cont1 my-font1">Youyang no.2 middle school cares for students</div>
-				<div class="cont2">Shanshu public welfare and Chongqing Yanfeng Adient blue sky development fund jointly set us “shanshu class”
-						In Chongqing Youyang no.2 middle school. Since 2017, Chongqing Yanfeng Adient has set up a volunteer team of 30 people every year to help 80”shuangte”(especially poor and excellent)students one on one, and has raised 9,000yuan for each student’s living expenses for three years, a total of 720,000yuan has been raised.</div>
+				<div class="cont2">Shanshu public welfare and Chongqing Yanfeng Adient blue sky development fund jointly set us "shanshu class"
+						In Chongqing Youyang no.2 middle school. Since 2017, Chongqing Yanfeng Adient has set up a volunteer team of 30 people every year to help 80"shuangte"(especially poor and excellent)students one on one, and has raised 9,000yuan for each student’s living expenses for three years, a total of 720,000yuan has been raised.</div>
 			</div>
 		</div>
 		<div class="content6 item-box">
