--- a/m/profession.html
+++ b/m/profession.html
@@ -328,8 +328,7 @@
 			<div class="title my-bg-color7 my-color2 my-font5">员工发展</div>
 			<div class="cont-box my-bg-color8">
 				<div class="cont1 my-color5 my-font6">打造一个没有天花板的舞台</div>
-				<div class="cont2">我们期望为人才的成长与发展提供良好的土壤和广阔的平台，在注重企业自身
-						不断发展的同时，我们重视每一位员工以及用于培养他们的资源投入。我们倡导：</div>
+				<div class="cont2">我们期望为人才的成长与发展提供良好的土壤和广阔的平台，在注重企业自身不断发展的同时，我们重视每一位员工以及用于培养他们的资源投入。我们倡导：</div>
 				<div class="cont3">员工是自己职业发展的主导者，直接主管是员工的教练，人力资源工作者是支持者和内部顾问。</div>
 				<div class="cont4">让每一个独特的灵魂在没有天花板的成长空间尽情闪耀！</div>
 			</div>
@@ -338,8 +337,7 @@
 	<section class="section6">
 		<div class="content1 wow fadeInLeft">
 			<div class="cont1 my-color5 my-font6">学习与发展原则</div>
-			<div class="cont2">员工发展的表现来源于个人在职业生涯中的改变、适应以及成长能力。
-				重庆延锋安道拓注重实时地在现实生活中学习的价值，从而使个人能满足充满挑战和变化的工作要求。
+			<div class="cont2">员工发展的表现来源于个人在职业生涯中的改变、适应以及成长能力。重庆延锋安道拓注重实时地在现实生活中学习的价值，从而使个人能满足充满挑战和变化的工作要求。
 			</div>
 			<div class="cont3 my-color5">公司对于员工个人学习和发展遵从</div>
 			<div class="cont4 my-color5">
@@ -369,8 +367,7 @@
 		<div class="content my-color1">
 			<div class="content1 wow fadeInUp ani-time2">
 				<div class="cont1 my-font6 my-color2">多样化学习资源</div>
-				<div class="cont2">在三个基本原则的指导下，公司对员工的学习发展体系建设中也遵循10-20-70的发展原则，
-					让培养与发展的资源更有助于转化为员工的能力。</div>
+				<div class="cont2">在三个基本原则的指导下，公司对员工的学习发展体系建设中也遵循10-20-70的发展原则，让培养与发展的资源更有助于转化为员工的能力。</div>
 				<div class="line">
 					<span class="my-bg-color2"></span>
 				</div>
@@ -405,10 +402,8 @@
 			</div>
 			<div class="content2 wow fadeInUp ani-time2">
 				<div class="cont1 my-font6 my-color5">员工发展通路</div>
-				<div class="cont2">在重庆延锋安道拓，员工的职业发展主要通过三条通路实现：
-					管理通路、专业通路和轮岗通路。</div>
-				<div class="cont3">公司倡导员工澄清自己的职业发展目标，选择合适自己的职业发展方向。
-						同时公司为员工设置了不同发展方向的通路。</div>
+				<div class="cont2">在重庆延锋安道拓，员工的职业发展主要通过三条通路实现：管理通路、专业通路和轮岗通路。</div>
+				<div class="cont3">公司倡导员工澄清自己的职业发展目标，选择合适自己的职业发展方向。同时公司为员工设置了不同发展方向的通路。</div>
 			</div>
 		</div>
 	</section>
@@ -417,8 +412,7 @@
 		<div class="content content-box">
 			<div class="content1 wow fadeInUp ani-time2">
 				<div class="cont1 my-font6 my-color5">CQYFAS领导力学院</div>
-				<div class="cont2">CQYFAS领导力学院培养训练有素的管理者及后备梯队人才。
-					在这里我们传承和打造CQYFAS的管理文化，旨在为每一位管理者或有潜力成为管理者的员工提供领导力成长的有序路径。
+				<div class="cont2">CQYFAS领导力学院培养训练有素的管理者及后备梯队人才。在这里我们传承和打造CQYFAS的管理文化，旨在为每一位管理者或有潜力成为管理者的员工提供领导力成长的有序路径。
 				</div>
 			</div>
 			<div class="content2 wow fadeInUp ani-time2">
@@ -436,8 +430,7 @@
 		<div class="content content-box">
 			<div class="content1 my-color1 wow fadeInUp ani-time2">
 				<div class="cont1 my-font6 my-color2">CQYFAS专业学院</div>
-				<div class="cont2">重庆延锋安道拓专业学院于2015年成立，旨在系统化的提升员工的专业能力，
-					在建立技术人才梯队的同时，激励和发挥高级专业人才的带头引领作用。
+				<div class="cont2">重庆延锋安道拓专业学院于2015年成立，旨在系统化的提升员工的专业能力，在建立技术人才梯队的同时，激励和发挥高级专业人才的带头引领作用。
 				</div>
 				<div class="cont3">目前设13大专业学院：</div>
 			</div>
