--- a/m/technology.html
+++ b/m/technology.html
@@ -228,9 +228,8 @@
 	</section>
 	<section class="section2">
 		<div class="text my-color5 my-font2 wow fadeInUp">
-			<div>Super seat是重庆延锋安道拓自主研发的一款多功能高端汽车商务座椅 。</div>
-			<div>我们从用户需求出发 ，还原不同座舱场景 ，满足座舱休闲娱乐 、商务办公等多种需求 ，
-					带你感受智能 、便捷 、舒适的座椅新体验 。</div>
+			<div>Super seat是重庆延锋安道拓自主研发的一款多功能高端汽车商务座椅。</div>
+			<div>我们从用户需求出发，还原不同座舱场景，满足座舱休闲娱乐、商务办公等多种需求，带你感受智能、便捷、舒适的座椅新体验。</div>
 		</div>
 		<a href="video/cjzy.mp4" class="lightbox-image play-box">
 			<div class="content2">
