--- a/culture.html
+++ b/culture.html
@@ -417,8 +417,7 @@
 							<span>春节联欢晚会</span>
 							<span class="time"> 每年1~2月</span>
 						</div>
-						<div class="cont-text">在CQYFAS，春节联欢晚会是一年一度最隆重的盛会。那是一个属于“艾小渝”自己的舞台，每年春晚主题都应景走心，
-								所有节目都是重庆延锋安道拓人根据时下流行的元素自编自导共同出品，齐心打造的视听盛宴。
+						<div class="cont-text">在CQYFAS，春节联欢晚会是一年一度最隆重的盛会。那是一个属于“艾小渝”自己的舞台，每年春晚主题都应景走心，所有节目都是重庆延锋安道拓人根据时下流行的元素自编自导共同出品，齐心打造的视听盛宴。
 						</div>
 					</div>
 					
@@ -433,8 +432,7 @@
 							<span>家属日</span>
 							<span class="time"> 每年11月1日</span>
 						</div>
-						<div class="cont-text">我们在每年的11月1日通过举办特色活动的形式邀请员工家属参与其中，从而感受延锋安道拓一直倡导的幸福家文化，为此我们称之为“家属日”。
-								从传统观念来看，（1+1）+1代表，其中1+1代表一个家庭的两位主体成员，剩下的1位代表孩子。因此我们将每年11月1日确定为家属日。							
+						<div class="cont-text">我们在每年的11月1日通过举办特色活动的形式邀请员工家属参与其中，从而感受延锋安道拓一直倡导的幸福家文化，为此我们称之为“家属日”。从传统观念来看，（1+1）+1代表，其中1+1代表一个家庭的两位主体成员，剩下的1位代表孩子。因此我们将每年11月1日确定为家属日。							
 						</div>
 					</div>
 				</div>
@@ -448,8 +446,7 @@
 							<span>团队集会 </span>
 							<span class="time">  每年7月</span>
 						</div>
-						<div class="cont-text">自1996年开始，CQYFAS各工厂由员工组成团队参赛，在团队集会的舞台上通过表演、舞蹈等多种形式展示公司最新的持续改进结果。
-							该活动每年7月在重庆延锋安道拓各工厂内部比赛，下半年则举行中国区和亚太区比赛。
+						<div class="cont-text">自1996年开始，CQYFAS各工厂由员工组成团队参赛，在团队集会的舞台上通过表演、舞蹈等多种形式展示公司最新的持续改进结果。该活动每年7月在重庆延锋安道拓各工厂内部比赛，下半年则举行中国区和亚太区比赛。
 						</div>
 					</div>
 				</div>
@@ -459,18 +456,10 @@
 				<div class="item item2"><img src="images/culture/3-8.jpg"></div>
 				<div class="content-box my-bg-color5 animated">
 					<div class="text-box">
-						<!-- <div class="title-text">
-							<span>愿景周</span>
-							<span class="time"> 每年6月</span>
-						</div>
-						<div class="cont-text">2000年以来，CQYFAS每年推出一个主题。每年6月，通过长达一周时间的各种活动向员工更进一步阐释重庆延锋安道拓的价值观、愿景，
-							旨在加强员工对公司取得持续成功至关重要因素的认知和理解。为此我们称为“愿景周”。
-						</div> -->
 						<div class="title-text">
 								<span>星耀盛典</span>
 							</div>
-							<div class="cont-text">从2015年开始，重庆延锋安道拓每年举办独立的年度奖项颁奖典礼。
-								我们鼓励个人、团队积极推选符合奖项的 候选人，号召艾小渝们不断探索真知、追求卓越。
+							<div class="cont-text">从2015年开始，重庆延锋安道拓每年举办独立的年度奖项颁奖典礼。我们鼓励个人、团队积极推选符合奖项的候选人，号召艾小渝们不断探索真知、追求卓越。
 							</div>
 					</div>
 				</div>
@@ -527,8 +516,7 @@
 			<div class="wow fadeInRight ani-time3">
 				<div class="cont1">社会责任</div>
 				<div class="cont2">
-					<div class="cont-text1">在重庆延锋安道拓（CQYFAS）,我们对成功的定义并不仅限于财务成功，
-							我们更加关怀环境保护和社会责任。因此，基于环保、社区责任和员工领导力三重底线的蓝天计划应运而生。
+					<div class="cont-text1">在重庆延锋安道拓（CQYFAS）,我们对成功的定义并不仅限于财务成功，我们更加关怀环境保护和社会责任。因此，基于环保、社区责任和员工领导力三重底线的蓝天计划应运而生。
 					</div>
 					<div class="cont-text2">
 						<!--<div >· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·</div>
@@ -550,24 +538,18 @@
 		<div class="content-box">
 			<div class="content content1 wow fadeInLeft ani-time2">
 				<div class="cont1 my-color2">蓝天基金</div>
-				<div class="cont2">公司于2014年正式成立了蓝天基金，并首次在当年春晚为蓝天基金注入131400元。
-					蓝天基金将用于支撑每年度的蓝天计划，为蓝天计划各项活动提供资金支持，以及帮扶企业内部困难职工。
-					截至2018年10月，蓝天基金累计帮扶金额超过90万元。
+				<div class="cont2">公司于2014年正式成立了蓝天基金，并首次在当年春晚为蓝天基金注入131400元。蓝天基金将用于支撑每年度的蓝天计划，为蓝天计划各项活动提供资金支持，以及帮扶企业内部困难职工。截至2018年10月，蓝天基金累计帮扶金额超过90万元。
 				</div>
 			</div>
 			<div class="content contents wow fadeInRight ani-time2">
 				<div class="content2">
 					<div class="cont1 my-color2">蓝天计划</div>
-					<div class="cont2">蓝天计划是一项全球性员工激励计划，旨在鼓励重庆延锋安道拓员工组成志愿者小组，
-						与当地公益性组织或学校合作以支持环境的可持续发展，社会服务，教育事业，公司员工组成3至100人
-						不等的志愿者项目团队，并与其选定的公益性组织或学校开展志愿者项目。
+					<div class="cont2">蓝天计划是一项全球性员工激励计划，旨在鼓励重庆延锋安道拓员工组成志愿者小组，与当地公益性组织或学校合作以支持环境的可持续发展，社会服务，教育事业，公司员工组成3至100人不等的志愿者项目团队，并与其选定的公益性组织或学校开展志愿者项目。
 					</div>
 				</div>
 				<div class="content3">
 					<div class="cont1 my-color2">开展蓝天计划的意义</div>
-					<div class="cont2">当地社区受益于志愿者的参与，我们也能从不断提高的领导经验和员工团队建设中
-						获益匪浅。重庆延锋安道拓的社会责任项目表明公司对于实现最高标准绩效、团队合作、包容性、领导力及成长的承诺。
-						公司支持员工加入全球的自愿行动，并且珍视员工为社区所做的重要贡献。
+					<div class="cont2">当地社区受益于志愿者的参与，我们也能从不断提高的领导经验和员工团队建设中获益匪浅。重庆延锋安道拓的社会责任项目表明公司对于实现最高标准绩效、团队合作、包容性、领导力及成长的承诺。公司支持员工加入全球的自愿行动，并且珍视员工为社区所做的重要贡献。
 					</div>
 				</div>
 			</div>
@@ -584,9 +566,7 @@
 				<div class="content-box my-bg-color5 animated">
 					<div class="my-all-center cont-box">
 						<div class="cont1">大学生领导力挑战赛</div>
-						<marquee class="cont2" behavior="scroll" direction="up"  loop="-1" scrollamount="0" scrolldelay="100">
-							蓝天计划将学校作为目标社区开展以环保、大学生领导力为主题的系列校园活动。
-							通过一系列高质量、高要求的团队挑战，锻炼当代大学生的领导能力、培养社会责任意识、宣传环保理念。
+						<marquee class="cont2" behavior="scroll" direction="up"  loop="-1" scrollamount="0" scrolldelay="100">蓝天计划将学校作为目标社区开展以环保、大学生领导力为主题的系列校园活动。通过一系列高质量、高要求的团队挑战，锻炼当代大学生的领导能力、培养社会责任意识、宣传环保理念。
 						</marquee>
 					</div>
 				</div>
@@ -597,8 +577,7 @@
 						<div class="my-all-center cont-box">
 							<div class="cont1">校企开放日</div>
 							<marquee class="cont2" behavior="scroll" direction="up"  loop="-1" scrollamount="0" scrolldelay="100">
-								我们邀请“大学生领导力挑战赛”获胜的所有队伍前往重庆延锋安道拓，
-								展示其获奖作品，参观公司及本地工厂，进行深入的校企参访交流。
+								我们邀请“大学生领导力挑战赛”获胜的所有队伍前往重庆延锋安道拓，展示其获奖作品，参观公司及本地工厂，进行深入的校企参访交流。
 							</marquee>
 						</div>
 					</div>
@@ -620,8 +599,7 @@
 						<div class="my-all-center cont-box">
 							<div class="cont1">酉阳二中关爱助学</div>
 							<marquee class="cont2" behavior="scroll" direction="up"  loop="-1" scrollamount="0" scrolldelay="100">
-								杉树公益联合重庆延锋安道拓蓝天基金在重庆酉阳二中共同设立“杉树班”。2017年起延锋安道拓每年组建30人志愿者队伍，
-								为80位“双特”（特别贫困、特别优秀）生进行一对一帮扶，并为每位学生募捐三年生活费9000元，共计募捐72万元。
+								杉树公益联合重庆延锋安道拓蓝天基金在重庆酉阳二中共同设立“杉树班”。2017年起延锋安道拓每年组建30人志愿者队伍，为80位“双特”（特别贫困、特别优秀）生进行一对一帮扶，并为每位学生募捐三年生活费9000元，共计募捐72万元。
 							</marquee>
 						</div>
 					</div>
