--- a/m/common/footer-en.html
+++ b/m/common/footer-en.html
@@ -38,7 +38,7 @@
 	<div class="text-box">
 		<div class="text1">© 2019 Adient plc. All Rights Reserved.</div>
 		<div class="text2">TEL: +86 23 86001988</div>
-		<div class="text2">ADD: 重庆市渝北区黄茅坪平泰路99号</div>
+		<div class="text2">ADD: No. 99 Pingtai Road, Huangmaoping, Yubei District, Chongqing</div>
 		<div class="text2"><a href="http://www.miitbeian.gov.cn" target="_blank">渝ICP备18007434号-1</a></div>
 	</div>
 </footer>
