--- a/common/footer.html
+++ b/common/footer.html
@@ -95,7 +95,7 @@
 						</div>
 						<div class="footer-right">
 							<div class="copyright">© 2019 Adient plc. All Rights Reserved
-								2016年10月31日，Adient plc(“Adient”)完成了与Johnson Controls International plc(“Johnson Controls”)的分离，现在是一个独立的公开贸易公司。而不是约翰逊的管理者，负责这项业务的运作，包括这个网站。
+								2016年10月31日，Adient plc(“Adient”)完成了与Johnson Controls International plc(“Johnson Controls”)的分离，现在是一个独立的公开贸易公司。而不是江森自控的管理者，负责这项业务的运作，包括这个网站。
 							</div>
 							<div class="clause">
 								<div>电话：+86 23 86001988</div>
