表面设计改为A面设计

--- a/m/technology.html
+++ b/m/technology.html
@@ -321,7 +321,7 @@
 					<div class="cont1 my-font1">工业造型</div>
 					<div class="cont2">
 						<div>创意设计</div>
-						<div>表面设计</div>
+						<div>A面设计</div>
 						<div>设计工程</div>
 						<div>色彩材质</div>
 						<div>精致工艺</div>
