--- a/technology.html
+++ b/technology.html
@@ -542,7 +542,7 @@
 								<div class="title">工业造型</div>
 								<div class="content">
 									<div>创意设计</div>
-									<div>表面设计</div>
+									<div>A面设计</div>
 									<div>设计工程</div>
 									<div>色彩材质</div>
 									<div>精致工艺</div>
